Добавил обновление существующей погоды через jdbc и jpa